# Brain-Stroke

./: README.md  app.config.toml  main.py  requirements.txt
brain_stroke_app/: pyproject.toml
