[tool.poetry]
name = "brain-stroke-app"
version = "0.1.0"
description = ""
authors = ["antonie <antonriziki@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_stroke_app"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
